--- a/app/src/main/res/layout/timely_layout.xml
+++ b/app/src/main/res/layout/timely_layout.xml
@@ -1,16 +1,18 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
               xmlns:app="http://schemas.android.com/apk/res-auto"
               xmlns:tools="http://schemas.android.com/tools"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
-              android:background="#c0c0c0"
+              android:background="@color/black"
               android:orientation="horizontal"
               tools:context=".MainActivity">
 
     <de.blue_robot.dreamy.view.TimelyClock
+        android:layout_centerInParent="true"
         android:id="@+id/timelyClock"
-        app:clockTextColor="@color/blue"
+        app:clockTextColor="@color/white"
+        app:textSize="42dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
 
-</LinearLayout>
+</RelativeLayout>
