--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -3,6 +3,7 @@
 
     <declare-styleable name="TimelyClock">
         <attr name="clockTextColor" format="color" />
+        <attr name="textSize" format="dimension" />
     </declare-styleable>
 
     <declare-styleable name="TimelyView">
