* Changed styling of clock

--- a/app/src/main/res/layout/daydream_layout.xml
+++ b/app/src/main/res/layout/daydream_layout.xml
@@ -11,8 +11,11 @@
         android:layout_centerInParent="true"
         android:id="@+id/timelyClock"
         app:clockTextColor="@color/white"
-        app:textSize="42dp"
+        app:textSize="62dp"
+        app:strokeThickness="2dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
+
+
 
 </RelativeLayout>
