--- a/app/src/main/res/layout/daydream_layout.xml
+++ b/app/src/main/res/layout/daydream_layout.xml
@@ -11,16 +11,23 @@
         android:id="@+id/timelyClock"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
         app:clockTextColor="@color/white"
         app:strokeThickness="4dp"
-        app:textSize="62dp"/>
+        app:textSize="62dp"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="70dp" />
 
-    <ImageView
-        android:id="@+id/iconView"
+    <ListView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:id="@+id/listView"
+        android:layout_below="@+id/timelyClock"
         android:layout_centerHorizontal="true"
-        android:layout_below="@id/timelyClock"/>
+        android:background="#ffffffff"
+        android:layout_margin="10pt"
+        android:dividerHeight="2pt"
+        android:divider="#ff000000"
+        android:alpha=".5"/>
 
 </RelativeLayout>
