--- a/app/src/main/res/layout/daydream_layout.xml
+++ b/app/src/main/res/layout/daydream_layout.xml
@@ -5,7 +5,7 @@
                 android:layout_height="match_parent"
                 android:background="@color/black"
                 android:orientation="horizontal"
-                tools:context=".MainActivity">
+                tools:context=".CustomDreamSettingsActivity">
 
     <de.blue_robot.dreamy.view.TimelyClock
         android:id="@+id/timelyClock"
