--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -3,6 +3,12 @@
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
         <!-- Customize your theme here. -->
+
+
+    </style>
+
+    <style name="SettingsLabel">
+        <item name="android:textSize">16dp</item>
     </style>
 
 </resources>
