--- a/app/src/main/res/layout/daydream_layout.xml
+++ b/app/src/main/res/layout/daydream_layout.xml
@@ -5,9 +5,9 @@
                 android:layout_height="match_parent"
                 android:background="@color/black"
                 android:orientation="horizontal"
-                tools:context=".CustomDreamSettingsActivity">
+                tools:context=".settings.DreamySettingsActivity">
 
-    <de.blue_robot.dreamy.view.TimelyClock
+    <de.dreamy.view.TimelyClock
         android:id="@+id/timelyClock"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
