--- a/app/src/main/res/layout/timely_clock.xml
+++ b/app/src/main/res/layout/timely_clock.xml
@@ -5,7 +5,7 @@
               android:gravity="bottom">
 
 
-    <de.blue_robot.dreamy.view.TimelyView
+    <de.dreamy.view.TimelyView
         android:id="@+id/hours1"
         android:layout_width="wrap_content"
         android:layout_height="32dp"
@@ -13,7 +13,7 @@
         android:paddingBottom="5dp"
         />
 
-    <de.blue_robot.dreamy.view.TimelyView
+    <de.dreamy.view.TimelyView
         android:id="@+id/hours2"
         android:layout_width="wrap_content"
         android:layout_height="32dp"
@@ -29,7 +29,7 @@
         android:text=":"
         />
 
-    <de.blue_robot.dreamy.view.TimelyView
+    <de.dreamy.view.TimelyView
         android:id="@+id/minutes1"
         android:layout_width="wrap_content"
         android:layout_height="32dp"
@@ -37,7 +37,7 @@
         android:paddingBottom="5dp"
         />
 
-    <de.blue_robot.dreamy.view.TimelyView
+    <de.dreamy.view.TimelyView
         android:id="@+id/minutes2"
         android:layout_width="wrap_content"
         android:layout_height="32dp"
@@ -46,7 +46,7 @@
         android:paddingBottom="5dp"
         />
 
-    <de.blue_robot.dreamy.view.TimelyView
+    <de.dreamy.view.TimelyView
         android:id="@+id/seconds1"
         android:layout_width="wrap_content"
         android:layout_height="16dp"
@@ -55,7 +55,7 @@
         android:paddingBottom="5dp"
         />
 
-    <de.blue_robot.dreamy.view.TimelyView
+    <de.dreamy.view.TimelyView
         android:id="@+id/seconds2"
         android:layout_width="wrap_content"
         android:layout_height="16dp"
