--- a/app/src/main/res/xml/dreamy_dream.xml
+++ b/app/src/main/res/xml/dreamy_dream.xml
@@ -1,2 +1,2 @@
 <dream xmlns:android="http://schemas.android.com/apk/res/android"
-    android:settingsActivity="de.blue_robot.dreamy/.CustomDreamSettingsActivity" />
+    android:settingsActivity=".settings.DreamySettingsActivity" />
