implemented settings for ending daydream on click on clock and displaying notifications. show notification access menu if requesting to show notificatoins

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,6 +6,7 @@
     </style>
 
     <style name="SettingsLabel">
+        <item name="android:layout_gravity">center_vertical</item>
         <item name="android:textSize">16dp</item>
     </style>
 
