--- a/app/src/main/res/layout/dream_settings.xml
+++ b/app/src/main/res/layout/dream_settings.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
-    android:layout_height="match_parent"
-    android:background="@android:color/black"
-    android:orientation="vertical">
+              android:layout_width="fill_parent"
+              android:layout_height="match_parent"
+              android:background="@android:color/black"
+              android:orientation="vertical">
 
 
     <TableLayout
@@ -13,25 +13,48 @@
 
         <TableRow
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:minHeight="72dp">
 
             <TextView
                 style="@style/SettingsLabel"
                 android:padding="3dip"
                 android:text="@string/unlock_on_time_click"
-                android:textColor="@android:color/white" />
+                android:textColor="@android:color/white"/>
 
             <Space
                 android:layout_width="0dp"
                 android:layout_height="0dp"
-                android:layout_weight="1" />
+                android:layout_weight="1"/>
 
             <Switch
                 android:id="@+id/endOnTimeClickSwitch"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="right"
-                android:gravity="right" />
+                android:layout_gravity="center_vertical|right"
+                android:gravity="right"/>
+        </TableRow>
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:minHeight="72dp">
+
+            <TextView
+                style="@style/SettingsLabel"
+                android:padding="3dip"
+                android:text="@string/displayNotifications"
+                android:textColor="@android:color/white"/>
+
+            <Space
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:layout_weight="1"/>
+
+            <Switch
+                android:id="@+id/displayNotificationsSwitch"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical|right"
+                android:gravity="right"/>
         </TableRow>
 
 
