--- a/app/src/main/res/layout/daydream_layout.xml
+++ b/app/src/main/res/layout/daydream_layout.xml
@@ -7,27 +7,108 @@
                 android:orientation="horizontal"
                 tools:context=".settings.DreamySettingsActivity">
 
+    <LinearLayout
+        android:id="@+id/carrierInfo"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_margin="16dp"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/carrierName"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:textColor="@color/white"
+            android:textSize="12sp"/>
+    </LinearLayout>
+
     <de.dreamy.view.TimelyClock
         android:id="@+id/timelyClock"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_below="@id/carrierInfo"
+        android:layout_centerHorizontal="true"
         app:clockTextColor="@color/white"
         app:strokeThickness="4dp"
-        app:textSize="62dp"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="70dp" />
+        app:textSize="62sp"/>
 
-    <ListView
+    <LinearLayout
+        android:id="@+id/statusBarIcons"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/listView"
-        android:layout_below="@+id/timelyClock"
+        android:layout_below="@id/timelyClock"
         android:layout_centerHorizontal="true"
+        android:orientation="horizontal"
+        android:padding="10dp">
+
+        <LinearLayout
+            android:id="@+id/batteryInfo"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="8dp"
+            android:orientation="horizontal"
+            android:visibility="gone">
+
+            <ImageView
+                android:id="@+id/chargingIcon"
+                android:layout_width="16dp"
+                android:layout_height="16dp"
+                android:layout_gravity="center_vertical|end"
+                android:layout_marginEnd="4dp"
+                android:src="@drawable/ic_battery_charging_full_white_48dp"
+                android:visibility="gone"/>
+
+            <TextView
+                android:id="@+id/batteryPercentage"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:textColor="@color/white"
+                android:textSize="12sp"/>
+        </LinearLayout>
+
+
+        <LinearLayout
+            android:id="@+id/wifiInfo"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="8dp"
+            android:orientation="horizontal"
+            android:visibility="gone">
+
+            <ImageView
+                android:id="@+id/wifiIcon"
+                android:layout_width="16dp"
+                android:layout_height="16dp"
+                android:layout_gravity="center"
+                android:layout_marginEnd="4dp"
+                android:src="@drawable/ic_wifi_white_48dp"
+                android:visibility="visible"/>
+
+            <TextView
+                android:id="@+id/wifiName"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:textColor="@color/white"
+                android:textSize="12sp"/>
+        </LinearLayout>
+    </LinearLayout>
+
+    <ListView
+        android:id="@+id/listView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/statusBarIcons"
+        android:layout_centerHorizontal="true"
+        android:layout_marginEnd="10pt"
+        android:layout_marginStart="10pt"
+        android:alpha=".7"
         android:background="#ffffffff"
-        android:layout_margin="10pt"
-        android:dividerHeight="2pt"
         android:divider="#ff000000"
-        android:alpha=".7"/>
+        android:dividerHeight="2pt"/>
 
 </RelativeLayout>
