--- a/app/src/main/res/layout/dream_settings.xml
+++ b/app/src/main/res/layout/dream_settings.xml
@@ -53,8 +53,76 @@
                 android:id="@+id/displayNotificationsSwitch"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical|right"
-                android:gravity="right"/>
+                android:layout_gravity="center_vertical|end"/>
+        </TableRow>
+
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:minHeight="72dp">
+
+            <TextView
+                style="@style/SettingsLabel"
+                android:padding="3dip"
+                android:text="@string/displayBatteryStatus"
+                android:textColor="@android:color/white"/>
+
+            <Space
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:layout_weight="1"/>
+
+            <Switch
+                android:id="@+id/showBatteryStatusSwitch"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical|end"/>
+        </TableRow>
+
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:minHeight="72dp">
+
+            <TextView
+                style="@style/SettingsLabel"
+                android:padding="3dip"
+                android:text="@string/displayWifiStatus"
+                android:textColor="@android:color/white"/>
+
+            <Space
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:layout_weight="1"/>
+
+            <Switch
+                android:id="@+id/showWifiStatusSwitch"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical|end"/>
+        </TableRow>
+
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:minHeight="72dp">
+
+            <TextView
+                style="@style/SettingsLabel"
+                android:padding="3dip"
+                android:text="@string/displayCarrierName"
+                android:textColor="@android:color/white"/>
+
+            <Space
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:layout_weight="1"/>
+
+            <Switch
+                android:id="@+id/showCarrierSwitch"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical|end"/>
         </TableRow>
 
 
