--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -3,11 +3,34 @@
     <!-- Base application theme. -->
     <style name="AppTheme" parent="android:Theme.DeviceDefault.Light.DarkActionBar">
         <!-- Customize your theme here. -->
+        <item name="colorPrimary">@color/purple</item>
+        <!-- colorAccent is used as the default value for colorControlActivated,
+        which is used to tint widgets -->
+        <item name="colorAccent">@color/purple</item>
+        <item name="colorControlNormal">@color/purple</item>
+        <item name="colorControlActivated">@color/purple</item>
+        <item name="colorControlHighlight">@color/purple</item>
+        <item name="android:thumbTint">@color/main</item>
+
     </style>
 
     <style name="SettingsLabel">
-        <item name="android:layout_gravity">center_vertical</item>
         <item name="android:textSize">16dp</item>
+        <item name="android:layout_alignParentStart">true</item>
+        <item name="android:layout_centerVertical">true</item>
+        <item name="android:textColor">@android:color/white</item>
+        <item name="android:layout_gravity">center_vertical|start</item>
+    </style>
+
+    <style name="SettingsSwitch">
+        <item name="android:textSize">16dp</item>
+        <item name="android:layout_alignParentEnd">true</item>
+        <item name="android:layout_centerVertical">true</item>
+        <item name="android:layout_gravity">center_vertical|end</item>
+    </style>
+
+    <style name="SettingsEntry">
+        <item name="android:minHeight">72dp</item>
     </style>
 
 </resources>
